<resources>
	<string name="empty" translatable="false"></string>
	<string name="app_name" translatable="false">Voidbox</string>
	<string name="download_subdirectory_name" translatable="false">@string/app_name</string>
	<string name="vault_cryptomator" translatable="false">vault.cryptomator</string>
	<string name="masterkey_cryptomator" translatable="false">masterkey.cryptomator</string>
	<string name="share_with_label">Encrypt</string>
	<string name="error_generic">An error occurred</string>
	<string name="error_authentication_failed">Authentication failed</string>
	<string name="error_authentication_failed_re_authenticate">Authentication failed, please login using %1$s</string>
	<string name="error_no_network_connection">No network connection</string>
	<string name="error_purchase_not_available">Purchase not available. Please try again later.</string>
	<string name="error_invalid_passphrase">Wrong password</string>
	<string name="error_file_or_folder_exists">A file or folder already exists.</string>
	<string name="error_vault_version_not_supported">Vault version %1$s is unsupported. This vault has been created with an older or newer version of Voidbox.</string>
	<string name="error_vault_config_file_missing_due_to_format_999">%1$s file is missing in your vault folder. Make sure that this file exists in your vault folder in the cloud.</string>
	<string name="error_vault_already_exists">Vault already exists.</string>
	<string name="error_no_such_file">File does not exist.</string>
	<string name="error_vault_has_been_locked">Vault has been locked.</string>
	<string name="error_cloud_already_exists">Cloud already exists.</string>
	<string name="error_activity_not_found">Please download an app that can open this file.</string>
	<string name="error_server_not_found">Server not found.</string>
	<string name="error_device_policy_manager_not_found">Please open your device settings and set the screen lock by hand</string>
	<string name="error_export_illegal_file_name">Export failed. Try to remove special characters from file names and export again.</string>
	<string name="error_name_contains_invalid_characters">Can\'t contain special characters.</string>
	<string name="error_names_contains_invalid_characters">File names can\'t contain special characters.</string>
	<string name="error_vault_name_contains_invalid_characters">Vault name can\'t contain special characters.</string>
	<string name="error_general_update">Update check failed. General error occurred.</string>
	<string name="error_hash_mismatch_update">Update check failed. Calculated hash doesn\'t match the uploaded file</string>
	<string name="error_update_no_internet">Update check failed. No internet connection.</string>
	<string name="error_failed_to_decrypt_webdav_password">Failed to decrypt WebDAV password, please re-add in settings</string>
	<string name="error_play_services_not_available">Google Play Services not installed</string>
	<string name="error_biometric_auth_aborted">Biometric authentication aborted</string>
	<string name="error_vault_version_mismatch">Version specified in %1$s is different to %2$s</string>
	<string name="error_vault_key_invalid">%1$s does not match with this %2$s</string>
	<string name="error_vault_config_loading">General error while loading the vault config</string>
	<string name="error_file_not_found_after_opening_using_3party">Local file isn\'t present anymore after switching back to Voidbox. Possible changes cannot be propagated back to the cloud.</string>
	<string name="error_no_such_bucket">No such bucket</string>
	<string name="error_masterkey_location_not_supported">Custom Masterkey location not supported yet</string>
	<string name="error_interact_with_fdroid_but_fdroid_missing">Failed to communicate with the F-Droid app. Not installed?</string>
	<string name="error_hub_vault_operation_not_supported">Vault operation not supported for Hub</string>
	<string name="error_hub_authentication_failed">Authentication against Hub failed</string>
	<string name="error_hub_device_already_register_for_other_user">This device is already registered for a different user. Try to change the user account or use a different device.</string>
	<string name="error_hub_invalid_setup_code">The Account Key is invalid.</string>
	<string name="error_hub_invalid_version">Unsupported Hub version.</string>
	<string name="error_hub_unlock_pre_31">Hub is only supported on Android 12 and above.</string>
	<string name="error_hub_not_trustworthy">Hub is not trustworthy.</string>
	<string name="read_only_reason_hub_inactive">Upgrade your Hub license to enable writing for this vault.</string>
	<string name="toast_purchase_revoked_refunded">Your lifetime purchase was refunded. You now have read-only access.</string>
	<string name="toast_purchase_revoked_subscription_inactive">Your subscription is no longer active. You now have read-only access.</string>
	<string name="screen_license_check_locked_create_vault">Unlock full version to create vaults</string>
	<string name="screen_license_check_locked_upload_files">Unlock full version to upload files</string>
	<string name="screen_license_check_locked_create_folder">Unlock full version to create folders</string>
	<string name="screen_license_check_locked_create_text_file">Unlock full version to create text files</string>
	<string name="screen_license_check_locked_share_node">Unlock full version to share files or folders</string>
	<string name="screen_license_check_locked_rename_node">Unlock full version to rename files or folders</string>
	<string name="screen_license_check_locked_move_node">Unlock full version to move files or folders</string>
	<string name="screen_license_check_locked_delete_node">Unlock full version to delete files or folders</string>
	<string name="screen_license_check_title">Unlock write access</string>
	<string name="screen_license_check_benefit_title">Your benefits</string>
	<string name="screen_license_check_benefit_family_sharing">Family sharing</string>
	<string name="screen_license_check_benefit_write_access">Write access to your vaults</string>
	<string name="screen_license_check_benefit_support">Open-source development</string>
	<string name="screen_license_check_button_purchase">Unlock via Google Play</string>
	<string name="screen_license_check_button_enter_license">Enter license key</string>
	<string name="screen_license_check_enter_license_action">Enter</string>
	<string name="screen_license_check_title_full_version">Unlock Full Version</string>
	<string name="screen_license_check_trial_title">30-Day Trial</string>
	<string name="screen_license_check_trial_price">Free</string>
	<string name="screen_license_check_trial_subtitle">for 30 days</string>
	<string name="screen_license_check_subscription_title">Yearly Subscription</string>
	<string name="screen_license_check_subscription_subtitle">yearly</string>
	<string name="screen_license_check_lifetime_title">Lifetime License</string>
	<string name="screen_license_check_lifetime_discount_badge_until">🔥 %1$d%% off until %2$s</string>
	<string name="screen_license_check_lifetime_discount_badge_generic">🔥 Limited time sale</string>
	<string name="screen_license_check_lifetime_subtitle">one-time</string>
	<string name="screen_license_check_restore_purchase">Restore Purchase</string>
	<string name="screen_license_check_terms">Terms of Use</string>
	<string name="screen_license_check_privacy">Privacy Policy</string>
	<string name="screen_license_check_trial_expiration">Expiration Date: %s</string>
	<string name="screen_license_check_trial_status_active">Active</string>
	<string name="screen_license_check_trial_status_expired">Expired</string>
	<string name="screen_license_check_trial_active_info">Trial expires: %s</string>
	<string name="screen_license_check_trial_expired_info">Your trial has expired.</string>
	<string name="screen_license_check_subscription_upgrade_hint">You have an active subscription. Buy the lifetime license and cancel your subscription to switch.</string>
	<string name="screen_license_check_cancel_subscription_hint">You now have a lifetime license. To avoid future charges, cancel your yearly subscription via the %1$s option in Settings.</string>
	<string name="screen_welcome_title">Welcome</string>
	<string name="screen_welcome_notifications_title">Stay notified</string>
	<string name="screen_welcome_notifications_message">Allow notifications so Voidbox can inform you about background activity, auto uploads, or other important events.</string>
	<string name="screen_welcome_notifications_button">Allow notifications</string>
	<string name="screen_welcome_notifications_granted">Notifications are enabled.</string>
	<string name="screen_welcome_continue_button">Continue</string>
	<string name="screen_welcome_screen_lock_button">Set screen lock</string>
	<string name="screen_welcome_screen_lock_already_set">Screen lock is already set.</string>
	<string name="screen_welcome_intro_body">Thanks for choosing Voidbox to protect your files.\n\nWith Voidbox, the key to your data is in your hands.\n\nVoidbox encrypts your data quickly and easily.</string>
	<string name="screen_welcome_intro_title">Welcome to Voidbox</string>
	<string name="screen_welcome_intro_thanks">Thanks for choosing Voidbox to protect your files.</string>
	<string name="screen_welcome_intro_feature_key">With Voidbox, the key to your data is in your hands.</string>
	<string name="screen_welcome_intro_feature_encrypt">Voidbox encrypts your data quickly and easily.</string>
	<string name="screen_welcome_trial_button" translatable="false">@string/screen_license_check_trial_price</string>
	<string name="next">Next</string>
	<string name="back">Back</string>
	<string name="cloud_names_crypto" translatable="false">Crypto</string>
	<string name="cloud_names_dropbox" translatable="false">Dropbox</string>
	<string name="cloud_names_google_drive" translatable="false">Google Drive</string>
	<string name="cloud_names_onedrive" translatable="false">OneDrive</string>
	<string name="cloud_names_pcloud" translatable="false">pCloud</string>
	<string name="cloud_names_webdav" translatable="false">WebDAV</string>
	<string name="cloud_names_nextcloud" translatable="false">Nextcloud</string>
	<string name="cloud_names_s3" translatable="false">S3</string>
	<string name="cloud_names_local_storage">Local storage</string>
	<string name="permission_message_export_file">Voidbox needs storage access to export files</string>
	<string name="permission_message_upload_file">Voidbox needs storage access to upload files</string>
	<string name="permission_message_share_file">Voidbox needs storage access to share files</string>
	<string name="permission_revoked_re_request_permission">Voidbox has lost permission to access this location. Please select this folder again to restore the permission.</string>
	<string name="snack_bar_action_title_settings">Settings</string>
	<string name="snack_bar_action_title_search">Search</string>
	<string name="snack_bar_action_title_search_previous">Previous</string>
	<string name="snack_bar_action_title_search_next">Next</string>
	<string name="dialog_button_cancel">Cancel</string>
	<string name="dialog_enter_password_password_label" translatable="false">@string/screen_webdav_settings_password_label</string>
	<string name="dialog_enter_password_positive_button">Unlock</string>
	<string name="screen_nextcloud_login_intro">Voidbox opens your Nextcloud in the browser. Approve the login there and come back, the server creates an app password for Voidbox automatically.</string>
	<string name="screen_nextcloud_login_server_label">Server address</string>
	<string name="screen_nextcloud_login_server_helper">For example https://cloud.example.com</string>
	<string name="screen_nextcloud_login_button">Sign in with Nextcloud</string>
	<string name="screen_nextcloud_login_waiting">Waiting for approval in the browser…</string>
	<string name="screen_nextcloud_login_cancel">Cancel</string>
</resources>