<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingStart="24dp"
		android:paddingEnd="24dp"
		android:paddingBottom="24dp">

		<com.google.android.material.bottomsheet.BottomSheetDragHandleView
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />

		<TextView
			android:id="@+id/tv_vault_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:ellipsize="end"
			android:singleLine="true"
			android:textAppearance="?attr/textAppearanceHeadlineSmall"
			android:textColor="?attr/colorOnSurface" />

		<TextView
			android:id="@+id/tv_vault_location"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="4dp"
			android:layout_marginBottom="24dp"
			android:ellipsize="middle"
			android:singleLine="true"
			android:textAppearance="?attr/textAppearanceBodyMedium"
			android:textColor="?attr/colorOnSurfaceVariant" />

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/til_password"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/dialog_enter_password_password_label"
			app:endIconMode="password_toggle">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/et_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:imeOptions="actionDone|flagNoPersonalizedLearning"
				android:inputType="textPassword"
				android:maxLines="1" />
		</com.google.android.material.textfield.TextInputLayout>

		<include
			android:id="@+id/ll_dialog_progress"
			layout="@layout/view_dialog_progress"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp" />

		<include
			android:id="@+id/ll_dialog_error"
			layout="@layout/view_dialog_error"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="24dp"
			android:gravity="end"
			android:orientation="horizontal">

			<com.google.android.material.button.MaterialButton
				android:id="@+id/btn_cancel"
				style="?attr/borderlessButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/dialog_button_cancel" />

			<com.google.android.material.button.MaterialButton
				android:id="@+id/btn_unlock"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:enabled="false"
				android:text="@string/dialog_enter_password_positive_button" />
		</LinearLayout>
	</LinearLayout>
</androidx.core.widget.NestedScrollView>
